--- a/2. Connect/backend/package.json
+++ b/2. Connect/backend/package.json
@@ -3,13 +3,14 @@
 	"version": "1.0.0",
 	"description": "Connecting frontend and backend",
 	"main": "server.js",
-	"type":"module",
+	"type": "module",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.19.2"
 	}
 }
